--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "devDependencies": {
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "name": "nizam-portfolio",
+  "version": "1.0.0",
+  "description": "",
+  "main": "script.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nizamudheenp/Nizam_Portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Nizamudheenp/Nizam_Portfolio/issues"
+  },
+  "homepage": "https://github.com/Nizamudheenp/Nizam_Portfolio#readme"
 }
